<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FF5C00"
    tools:context=".Registration">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/hotelimg" />

    <TextView
        android:id="@+id/Registration"
        android:layout_marginLeft="80dp"
        android:textSize="30dp"
        android:fontFamily="@font/elecfont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration1" />

    <EditText
        android:id="@+id/email"
        android:fontFamily="@font/elecfont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/password"
        android:fontFamily="@font/elecfont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:hint="@string/password" />

    <Button
        android:id  ="@+id/registerButton"
        android:fontFamily="@font/elecfont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register1" />

    <TextView
        android:id="@+id/loginNow"
        android:layout_marginLeft="80dp"
        android:textSize="30dp"
        android:fontFamily="@font/elecfont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_login" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>